--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ text-align:center
         <h1 id="h1">My Personal Values</h1>
         </header>
          <nav>
-            <a href="Index3.html">Home</a>
+            <a href="index.html">Home</a>
         <a href="industry.html">Industry</a>
     </nav>
         <main>
@@ -84,4 +84,5 @@ text-align:center
         </footer>
         </center>
 </body>
+
 </html>
