--- a/Industry.html
+++ b/Industry.html
@@ -30,7 +30,7 @@ text-align:center
         <h1 id="h1">Animation Industry</h1>
         </header>
         <nav>
-        <a href="index3.html">Home</a>
+        <a href="index.html">Home</a>
     </nav>
     </head>
         <main>
@@ -87,4 +87,5 @@ text-align:center
         </footer>
         </center>
 </body>
+
 </html>
