--- a/industry.html
+++ b/industry.html
@@ -35,7 +35,7 @@ text-align:center
     </head>
         <main>
             <div class="value">
-                <img src="dreamworks.webp" alt="Integrity written on chalkboard" width="200" height="200">
+                <img src="dreamworks.webp" alt="Dreamworks Logo" width="200" height="200">
                 <center>
                 <p> The animation industry is growing industry that encompasses various fields like film, television, gaming, and advertising.
                     Animation is a filming technique where still images are manipulated to create moving images. Our industry is focused on 3d animation:
@@ -89,3 +89,4 @@ text-align:center
 </body>
 
 </html>
+
